Change dev-server port and start script
We may want to have same port as create-react-app - 3000.
Also `yarn start` is well known and will be better.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "build:prod": "NODE_ENV='production' webpack -p",
     "build:dev": "NODE_ENV=development webpack -d",
-    "dev": "webpack-dev-server",
+    "start": "webpack-dev-server",
     "watch": "webpack --watch"
   }
 }
